--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@ Preencha o formulário com suas respostas. Cada questão vale 1 ponto.</textarea
 
       // URL base da sua API
       // Quando estiver online, substitua 'http://localhost:3000' pela URL do seu servidor
-      const API_URL = "http://localhost:3000/api";
+      const API_URL = "https://sistema-avaliacoes-backend.onrender.com/api";
 
       // === Elementos do DOM ===
       const questionsContainer = document.getElementById("questions-container");
